doc/src/content/docs/0.6.x/api/compute/holo/gs.mdx
---
title: gs
description: Gerchberg-Saxton 法による多焦点最適化
sidebar:
  order: 12
srcPath: crates/autd3-rs-pattern-holo/src/linear_synthesis/gs.rs
slug: 0.6.x/api/compute/holo/gs
---

import CodeTabs from "@components/CodeTabs.astro";

gs (Gerchberg-Saxton 法) は, 振動子側と焦点側の振幅制約を交互に課しながら順伝搬と逆伝搬を反復するアルゴリズム.
naive より焦点間の干渉を抑えられるが, 反復回数に応じて計算量が増える.
アルゴリズムは Marzo らの論文 ([Marzo & Drinkwater, 2019](https://doi.org/10.1073/pnas.1813047115)) に基づく.

## API

<CodeTabs rust={"gs(\n    &NalgebraBackend,\n    &geometry,\n    &foci,\n    wavelength,\n    &option,\n    &mut dst,\n)?;"} python={"gs(geometry, foci, wavelength, option, dst)"} csharp={"Holo.Gs(geometry, foci, wavelength, option, dst);"} />

| 引数         | 型                     | 説明                      |
| ------------ | ---------------------- | ------------------------- |
| `geometry`   | `&Geometry`            | デバイス配置              |
| `foci`       | `&[AmplitudeTarget]`      | 焦点列 (位置と目標振幅)   |
| `wavelength` | `Length`               | 波長                      |
| `option`     | `&GsOption`            | 追加オプション (下記参照) |
| `dst`        | `&mut [[Emission; _]]` | 出力バッファ              |

`option` 以外の引数は [Naive](/autd3-sdk/0.6.x/api/compute/holo/naive/) と同一.

## GsOption

<CodeTabs rust={"GsOption {\n    repeat,\n    constraint,\n    directivity,\n    mask,\n    parallel,\n}"} python={"GsOption(\n    repeat,\n    constraint,\n    directivity,\n    mask,\n    parallel,\n)"} csharp={"new GsOption(\n    repeat,\n    constraint,\n    directivity,\n    mask,\n    parallel\n)"} />

| フィールド    | 型                   | デフォルト                    |
|---------------|----------------------|---------------------------|
| `repeat`      | `NonZeroUsize`       | `100`                     |
| `constraint`  | `EmissionConstraint` | `Clamp(MIN, MAX)`         |
| `directivity` | `Directivity`        | `Sphere`                  |
| `mask`        | `TransducerMask`     | `AllEnabled`              |
| `parallel`    | `bool`               | `true`                    |

`repeat` は反復回数. 大きくするほど品質は向上するが計算時間も増える.
`constraint` / `directivity` / `mask` の意味は [Holo 概要](/autd3-sdk/0.6.x/api/compute/holo/) を参照.

`parallel` は結果の量子化をホスト側で複数スレッドへ分散するかどうか (GPU バックエンドの場合は無視される).

## Example

<CodeTabs rust={"use std::num::NonZeroUsize;\n\nuse autd3_rs::geometry::{Autd3, Geometry, offset};\nuse autd3_rs::units::{m, mm, s};\nuse autd3_rs::value::Intensity;\nuse autd3_rs_pattern::wavelength;\nuse autd3_rs_pattern_holo::{\n    AmplitudeTarget, Directivity, EmissionConstraint, GsOption, NalgebraBackend, Pa, TransducerMask,\n    gs,\n};\n\nlet geometry = Geometry::new(vec![Autd3::default()]);\n\nlet mut dst = geometry.pattern_buffer();\n\ngs(\n    &NalgebraBackend,\n    &geometry,\n    &[\n        AmplitudeTarget {\n            point: geometry.center() + offset(-30.0 * mm, 0.0 * mm, 150.0 * mm),\n            amplitude: 2.5e3 * Pa,\n        },\n        AmplitudeTarget {\n            point: geometry.center() + offset(30.0 * mm, 0.0 * mm, 150.0 * mm),\n            amplitude: 2.5e3 * Pa,\n        },\n    ],\n    wavelength(340.0 * m / s),\n    &GsOption {\n        repeat: NonZeroUsize::new(100).unwrap(),\n        constraint: EmissionConstraint::Clamp(Intensity::MIN, Intensity::MAX),\n        directivity: Directivity::Sphere,\n        mask: TransducerMask::AllEnabled,\n        parallel: true,\n    },\n    &mut dst,\n)?;"} python={"import numpy as np\nfrom autd3.geometry import Autd3, Geometry\nfrom autd3.units import m, s\nfrom autd3_pattern import wavelength\nfrom autd3_pattern_holo import (\n    AmplitudeTarget,\n    Directivity,\n    EmissionConstraint,\n    GsOption,\n    Pa,\n    TransducerMask,\n    gs,\n)\n\ngeometry = Geometry([Autd3([0.0, 0.0, 0.0], [1.0, 0.0, 0.0, 0.0])])\n\ndst = geometry.pattern_buffer()\n\ngs(\n    geometry,\n    [\n        AmplitudeTarget(\n            point=geometry.center() + np.array([-30.0, 0.0, 150.0]),\n            amplitude=2.5e3 * Pa,\n        ),\n        AmplitudeTarget(\n            point=geometry.center() + np.array([30.0, 0.0, 150.0]),\n            amplitude=2.5e3 * Pa,\n        ),\n    ],\n    wavelength(340 * m / s),\n    GsOption(\n        repeat=100,\n        constraint=EmissionConstraint.Clamp(0x00, 0xFF),\n        directivity=Directivity.Sphere,\n        mask=TransducerMask.AllEnabled,\n    ),\n    dst,\n)"} csharp={"using System.Numerics;\nusing AUTD3;\nusing AUTD3.Holo;\nusing static AUTD3.Units;\nusing static AUTD3.Holo.HoloUnits;\n\nvar geometry = new Geometry(new[] { new Autd3(Vector3.Zero) });\n\nvar dst = geometry.PatternBuffer();\n\nHolo.Gs(\n    geometry,\n    new[]\n    {\n        new AmplitudeTarget(geometry.Center + new Vector3(-30.0f, 0.0f, 150.0f), 2.5e3f * Pa),\n        new AmplitudeTarget(geometry.Center + new Vector3(30.0f, 0.0f, 150.0f), 2.5e3f * Pa),\n    },\n    Pattern.Wavelength(340.0f * m / s),\n    new GsOption(\n        repeat: 100,\n        constraint: EmissionConstraint.Clamp(Intensity.Min, Intensity.Max),\n        directivity: Directivity.Sphere,\n        mask: TransducerMask.AllEnabled\n    ),\n    dst\n);"} />
